fixed css issue with contact page, removed use client on it and added darker css scrollbars

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,3 +70,24 @@ body {
     @apply bg-background text-foreground;
   }
 }
+
+/* WebKit scrollbar configs */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background: #2e2e2e;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #4e4e4e;
+  border-radius: 10px;
+  border: 3px solid #2e2e2e;
+}
+
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #4e4e4e #2e2e2e;
+}
